--- a/BirthdayTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/BirthdayTracker/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Add Birthday-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BirthdayTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AddBirthdayViewController" customModule="BirthdayTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -68,6 +68,11 @@
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="kjr-Ck-eF3"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="twG-Dv-hQ8"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="birthdayPicker" destination="n4a-gy-Gfh" id="zYz-2Q-as2"/>
+                        <outlet property="firsNameTextField" destination="AA6-P3-KfS" id="vUl-y7-Fcd"/>
+                        <outlet property="lastNameTextField" destination="8zj-rq-5T9" id="LwN-Be-Dhd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
